# pdf-extract

./: README.md  main.py  pdf_classifier.py  pipeline.py  pyproject.toml  telugu_processor.py  test_pipeline.py  text_extractor.py
