[project]
name = "pdf-extract"
version = "0.1.0"
description = "A pipeline for extracting text from text-based PDFs with Telugu Unicode conversion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.23.0",
    "chardet>=5.0.0"
]

[project.scripts]
pdf-extract = "main:main"
